--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,58 +1,67 @@
 <!-- Modelo feito com propriedades -->
-<!-- 
-    <div>
-        Student: {{ name }}
-        <div [hidden]="!isJedi">
-            Jedi Temple: Coruscant
-        </div>
-    </div> 
--->
+<!-- Quando usamos hiddem a visibilidade é controlada via CSS -->
+<div *ngIf="name">
+  Student: {{ name }}
+  <span [hidden]="!isJedi"> - Jedi Temple: Coruscant</span>
+</div>
 
 <!-- Modelo feito com objeto -->
-<!-- 
-    <div>
-        Student: {{ student.name }}
-        <div [hidden]="!student.isJedi">
-            Jedi Temple: {{ student.temple }}
-        </div>
-    </div>  
--->
-
-<!-- 
-    Obs: Quanto utilizamos o atributo hidden de um elemento, aquele elemento 
-    irá continuar sendo colocado no nosso DOM, mas a visibilidade do elemento
-    será controlada via CSS com o diplay block ou none 
--->
-
-<!-- 
-    <div>
-        Student: {{ student.name }}
-        <div *ngIf="student.isJedi">
-            Jedi Temple: {{ student.temple }}
-        </div>
-    </div>  
--->
-<!-- 
-    Obs: No caso de usar a diretiva ngIf o angular usa templates de html5 para gerar 
-    o componente, apenas se a expressâo for true ele vai fazer um clone do elemento
-    e deixar-lo disponível no DOM diferente do hidden 
--->
-
-
-<!-- 
-    Neste caso usando operador de navegação segura cado o valor da propriedade seja 
-    undefined, basicamente dizemos ao angular que se até aquele ponto for undefined o restante
-    não precisa ser avaliado, evitando de mostra erros na tela 
--->
 <div *ngIf="student">
-    Student: <a href="#" (click)="clicked()" > {{ student?.name }} </a>
-    <div *ngIf="student?.isJedi">
-        Jedi Temple: {{ student?.temple }} <button (click)="description.focus()">Focus no text area!</button><br/>
+  Student: {{ student.name }}
+  <span [hidden]="!student.isJedi"> - Jedi Temple: {{ student.temple }}</span>
+</div>
 
-        <textarea #description cols="30" rows="10"></textarea>
+<!--
+    Obs: Quanto utilizamos o atributo hidden de um elemento, aquele elemento
+    irá continuar sendo colocado no nosso DOM, mas a visibilidade do elemento
+    será controlada via CSS com o diplay block ou none.
+
+    Obs: No caso de usar a diretiva ngIf o angular usa templates de html5 para gerar
+    o componente, apenas se a expressâo for true ele vai fazer um clone do elemento
+    e deixar-lo disponível no DOM diferente do hidden
+
+    Ao usar o ponto de ?, indicamos ao angular que se até aquele ponto a expressão
+    for undefined o restando não precisa ser avaliado
+-->
+<div *ngIf="studentForHidden">
+  Student: {{ studentForHidden?.name }}
+  <span [hidden]="!studentForHidden?.isJedi">
+    - Jedi Temple: {{ studentForHidden?.temple }}
+  </span>
+</div>
+
+<!-- For ng IF -->
+<div *ngIf="studentForIf">
+  Student: {{ studentForIf?.name }}
+  <span *ngIf="studentForIf?.isJedi">
+    - Jedi Temple: {{ studentForIf?.temple }}
+  </span>
+</div>
+
+<!--
+    Neste caso usando operador de navegação segura cado o valor da propriedade seja
+    undefined, basicamente dizemos ao angular que se até aquele ponto for undefined o restante
+    não precisa ser avaliado, evitando de mostra erros na tela
+-->
+<div *ngIf="studentNewWithEvent">
+  <b>Student:</b>
+  <a href="#" (click)="clicked($event)">
+    {{ studentNewWithEvent?.name }}
+  </a>
+
+  <span *ngIf="studentNewWithEvent?.isJedi">
+    <p>Jedi Temple: {{ studentNewWithEvent?.temple }}</p>
+
+    <div>
+      <button (click)="description.focus()">Focus no text area!</button> &nbsp;
+      <button (click)="input.focus()">Focus no input!</button>
     </div>
-</div> 
 
-<p *ngIf="!student">
-    Sem dados para exibir
-</p>
+    <div>
+      <input #input type="text" (keydown)="keyDown($event)" />
+    </div>
+    <div>
+      <textarea #description cols="30" rows="10"></textarea>
+    </div>
+  </span>
+</div>
